update verify email flow
