# src/apis/auth/authRouter.js
@@ -7,6 +7,7 @@ const routes = express.Router();
 
 routes.post("/register", asyncHandler(AuthController.register));
 routes.post("/verify-email/:token", asyncHandler(AuthController.verifyEmail));
+routes.post("/resend-verify-email", asyncHandler(AuthController.resendEmailVerify));
 routes.post("/login", asyncHandler(AuthController.login));
 routes.post("/logout", asyncHandler(AuthController.logout));
 routes.post("/refresh-token", asyncHandler(AuthController.newAccessToken));
